Working on adding a inertia weight computing strategy component